--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Zoror</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <title>Zoror</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script type="text/javascript"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+  </head>
 <body class="body_class">
  <div class="container-fluid"> 
    <header>
@@ -29,13 +29,14 @@
     <img src="images/line.png" class="line">
 </section>
 <section>
-    <div class="img2">
- <img src="images/sanfrancisco.jpg" >
+<div class="img2">
+     <img src="images/sanfrancisco.jpg" >
   <div class="content2">
 <div>
     <h4> <div class="heading">Reflections on my holiday in United states...</div></h4>
-    <button class="see_article">see Article&nbsp;<i class="fa fa-play"></i></button></div>   
-  </div>
+    <button class="see_article">see Article&nbsp;<i class="fa fa-play"></i></button>
+</div>   
+</div>
 </div>    
 </section>
 <section>
@@ -46,22 +47,22 @@
      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).<br><br>
      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-
     </div>
-     <div class="col-md-4 col-xs-3 grey"  >
+    <div class="col-md-4 col-xs-3 grey"  >
     <div id="pointer"></div>  
         <h2 class="blog_title" style="text-align: center;">About The Author</h2>
         <img src="images/zozor.png" class="blog_image">
-    <p>Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-<p>Various versions have evolved over the years, sometimes by accident</p>
+        <p>Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+        <p>Various versions have evolved over the years, sometimes by accident</p>
 <div class="social_icone">
-        <img  src="images/facebook.png">
+    <img  src="images/facebook.png">
     <img src="images/rss.png">
     <img src="images/twitter.png">
     <img src="images/vimeo.png">
     <img src="images/flickr.png">
 </div>    
-</div></section>
+</div>
+</section>
 <section>
     <img src="images/line.png" class="line2">
     <img src="images/top.png" class="top">
@@ -94,8 +95,10 @@
         <li>rgyt</li>
         <li>jhjjh</li>
         <li>jjk</li>
-        <li>jhjhj</li></div>
-    </div>
+        <li>jhjhj</li>
+        </div>
+</div>
+</div>
 </footer>   
 </div></body>
 </html>
