--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <title>Zoror</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script type="text/javascript"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Zoror</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <body class="body_class">
  <div class="container-fluid"> 
    <header>
-     <div> <img src="images/zozor_logo.png"> <span class="title">ZOROR</span></div>
+     <div> 
+      <img src="images/zozor_logo.png">
+      <span class="title">ZOROR</span>
+    </div>
    </header>
-   <div class="text1">Travel Diaries</div>
+   <span class="text1">Travel Diaries</span>
     <nav>
        <ul>
           <li ><a href="home.html">HOME</a></li>
@@ -31,9 +34,9 @@
 <section>
 <div class="img2">
      <img src="images/sanfrancisco.jpg" >
-  <div class="content2">
+<div class="content2">
 <div>
-    <h4> <div class="heading">Reflections on my holiday in United states...</div></h4>
+    <h4> <span class="heading">Reflections on my holiday in United states...</span></h4>
     <button class="see_article">see Article&nbsp;<i class="fa fa-play"></i></button>
 </div>   
 </div>
@@ -68,12 +71,12 @@
     <img src="images/top.png" class="top">
 </section>
 <footer>
-    <div class="row">
-        <div class="col-md-4 col-xs-3">
-            <h3>My last Tweet</h3>
-            <p>HEE HAWL</p>
-            <p>12/05 13:12</p>
-        </div>
+<div class="row">
+  <div class="col-md-4 col-xs-3">
+    <h3>My last Tweet</h3>
+    <p>HEE HAWL</p>
+    <p>12/05 13:12</p>
+  </div>
 <div class="col-md-4 col-xs-3">
     <h3> MY pictures</h3>
     <img src="images/pic1.jpg">
@@ -82,23 +85,24 @@
     <img src="images/pic4.jpg"> 
 </div>
 <div class="col-md-4 col-xs-3">
-    <h3>MY FRIENDS</h3>
-        <div class="my_friends col-md-6">
-        <li >li john</li>
-        <li>jackson</li>
-        <li>andry</li>
-        <li>lena</li></ul>
-        </div>
-        <div  class="my_friends col-md-6">
-        <li>henry</li>
-        <li>yuui</li>
-        <li>rgyt</li>
-        <li>jhjjh</li>
-        <li>jjk</li>
-        <li>jhjhj</li>
-        </div>
+  <h3>MY FRIENDS</h3>
+    <div class="my_friends col-md-6">
+      <li >li john</li>
+      <li>jackson</li>
+      <li>andry</li>
+      <li>lena</li></ul>
+    </div>
+    <div  class="my_friends col-md-6">
+      <li>henry</li>
+      <li>yuui</li>
+      <li>rgyt</li>
+      <li>jhjjh</li>
+      <li>jjk</li>
+      <li>jhjhj</li>
+    </div>
 </div>
 </div>
 </footer>   
-</div></body>
+</div>
+</body>
 </html>
