--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
       </ul>
    </nav>
 <section>
-    <img src="images/line.png" class="line">
+    <img src="images/line.png" class="partition">
 </section>
 <section>
 <div class="img2">
      <img src="images/sanfrancisco.jpg" >
 <div class="content2">
-<div>
-    <h4> <span class="heading">Reflections on my holiday in United states...</span></h4>
-    <button class="see_article">see Article&nbsp;<i class="fa fa-play"></i></button>
-</div>   
+    <h4> <p class="heading">Reflections on my holiday in United states...</p></h4>
+    <button class="see-article">see Article&nbsp;<i class="fa fa-play"></i></button>
 </div>
 </div>    
 </section>
@@ -51,13 +49,13 @@
      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).<br><br>
      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </div>
-    <div class="col-md-4 col-xs-3 grey"  >
+    <div class="col-md-4 col-xs-3 side-blog"  >
     <div id="pointer"></div>  
-        <h2 class="blog_title" style="text-align: center;">About The Author</h2>
-        <img src="images/zozor.png" class="blog_image">
+        <h2 class="blog-title" style="text-align: center;">About The Author</h2>
+        <img src="images/zozor.png" class="blog-image">
         <p>Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
         <p>Various versions have evolved over the years, sometimes by accident</p>
-<div class="social_icone">
+<div class="social-icons">
     <img  src="images/facebook.png">
     <img src="images/rss.png">
     <img src="images/twitter.png">
@@ -67,7 +65,7 @@
 </div>
 </section>
 <section>
-    <img src="images/line.png" class="line2">
+    <img src="images/line.png" class="partition2">
     <img src="images/top.png" class="top">
 </section>
 <footer>
@@ -86,13 +84,13 @@
 </div>
 <div class="col-md-4 col-xs-3">
   <h3>MY FRIENDS</h3>
-    <div class="my_friends col-md-6">
+    <div class="my-friends col-md-6">
       <li >li john</li>
       <li>jackson</li>
       <li>andry</li>
       <li>lena</li></ul>
     </div>
-    <div  class="my_friends col-md-6">
+    <div  class="my-friends col-md-6">
       <li>henry</li>
       <li>yuui</li>
       <li>rgyt</li>
